--- a/Semanas/Tema1_Errores_Excepciones.ipynb
+++ b/Semanas/Tema1_Errores_Excepciones.ipynb
@@ -5,7 +5,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Errores y excepciones\n"
+    "# Errores y excepciones en Python\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Errores en Python"
    ]
   },
   {
@@ -20,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Errores de sintaxis\n",
+    "### Errores de sintaxis\n",
     "\n",
     "Estos errores son seguramente los más simples de resolver, pues son detectados por el intérprete (o por el compilador, según el tipo de lenguaje que estemos utilizando) al procesar el código fuente y generalmente son consecuencia de equivocaciones al escribir el programa. En el caso de Python estos errores son indicados con un mensaje `SyntaxError`. Por ejemplo, si trabajando con Python intentamos definir una función y en lugar de `def` escribimos `dev`."
    ]
@@ -29,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ejemplo\n",
+    "#### Ejemplo\n",
     "\n",
     "Si al definir una función en Python escribimos `dev` en lugar de `def`, el intérprete mostrará un error de sintaxis:"
    ]
@@ -48,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Errores semánticos\n",
+    "### Errores semánticos\n",
     "\n",
     "Estos errores ocurren cuando un programa, aunque no genere mensajes de error, no produce el resultado esperado. Suelen ser causados por un algoritmo incorrecto, una mala interpretación del problema o la omisión de una instrucción clave.\n",
     "\n",
@@ -72,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Errores de ejecución\n",
+    "### Errores de ejecución\n",
     "También conocidos como **errores en tiempo de ejecución**, ocurren mientras el programa está en ejecución y pueden deberse a diversas causas. Algunas de las más comunes incluyen:  \n",
     "\n",
     "- **Errores de entrada del usuario:** cuando se proporciona un dato en un formato inesperado, por ejemplo, ingresar una cadena en lugar de un número.  \n",
@@ -85,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ejemplo\n",
+    "#### Ejemplo\n",
     "\n",
     "Si el usuario ingresa un valor no numérico cuando se espera un número entero, el programa fallará:"
    ]
@@ -136,7 +143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Lanzamiento de excepciones en Python**  \n",
+    "### Lanzamiento de excepciones en Python\n",
     "Cuando ocurre un error en tiempo de ejecución, Python genera una excepción y muestra un mensaje de error. Algunos ejemplos de excepciones comunes son:  \n",
     "\n",
     "- `ZeroDivisionError`: Se genera cuando intentamos dividir por cero.  \n",
@@ -152,7 +159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ejemplo"
+    "#### Ejemplo"
    ]
   },
   {
@@ -205,7 +212,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ejemplo"
+    "#### Ejemplo"
    ]
   },
   {
@@ -255,7 +262,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Manejo de excepciones"
+    "### Manejo de excepciones"
    ]
   },
   {
@@ -301,7 +308,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sentencias `try` - `except`"
+    "### Sentencias `try` - `except`"
    ]
   },
   {
@@ -362,7 +369,9 @@
     "  \n",
     "- `FileNotFoundError`: Se produce cuando se intenta abrir un archivo que no existe.\n",
     "  \n",
-    "- `ZeroDivisionError`: Se produce cuando se intenta dividir por cero."
+    "- `ZeroDivisionError`: Se produce cuando se intenta dividir por cero.\n",
+    "  \n",
+    "- `IOError` (Input/Output Error) Se produce en Python para manejar errores relacionados con operaciones de entrada y salida, como la lectura o escritura en archivos."
    ]
   },
   {
@@ -377,7 +386,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ejemplo "
+    "#### Ejemplo "
    ]
   },
   {
@@ -464,7 +473,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Multiples excepciones"
+    "### Multiples excepciones"
    ]
   },
   {
@@ -541,7 +550,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Si no sabes que excepción puede saltar, puedes usar la clase genérica `Exception`. En este caso se controla cualquier tipo de excepción. De hecho todas las excepciones heredan de `Exception`."
+    "### Capturar cualquier excepción\n",
+    "\n",
+    "Si no sabemos qué tipo de error puede ocurrir, podemos usar `except Exception` para capturar cualquier excepción. De hecho todas las excepciones heredan de `Exception`."
    ]
   },
   {
@@ -581,7 +592,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ejercicio\n",
+    "#### Ejercicio\n",
     "\n",
     "Escribe una programa en Python que solicite al usuario ingresar la edad del asegurado y la suma asegurada, luego determina la **prima de un seguro de vida** con base en la edad del asegurado y la suma asegurada mediante la siguiente fórmula:  \n",
     "\n",
@@ -601,7 +612,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Uso de `else`"
+    "### Uso de `else`"
    ]
   },
   {
@@ -632,7 +643,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Uso de finally"
+    "### Uso de finally"
    ]
   },
   {
@@ -679,7 +690,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Resumen**\n",
+    "### **Resumen**\n",
     "\n",
     "Veamos ahora como es que actúa Python al encontrarse con estos bloques. \n",
     "\n",
