--- a/Semanas/Tema1_Errores_Excepciones.ipynb
+++ b/Semanas/Tema1_Errores_Excepciones.ipynb
@@ -469,6 +469,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import clear_output\n",
+    "\n",
+    "def imprimir():\n",
+    "    try:\n",
+    "        clear_output(wait=True) \n",
+    "        num=int(input('¿Cuantos años tienes?'))\n",
+    "        print(f'Tienes  {num} años')\n",
+    "    except:\n",
+    "        print(\"Entradas no válidas\")\n",
+    "        imprimir()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tienes  6 años\n"
+     ]
+    }
+   ],
+   "source": [
+    "imprimir()"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -851,7 +886,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -865,14 +900,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.9.13"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "ce4d963573401a72c80fabe1ef75418dde5088fa46d743e51eca5fefbd048d5c"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
