--- a/Semanas/Tema1_Errores_Excepciones.ipynb
+++ b/Semanas/Tema1_Errores_Excepciones.ipynb
@@ -678,7 +678,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Uso de finally"
+    "### Uso de `finally`"
    ]
   },
   {
@@ -686,9 +686,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "En Python, la instrucción `finally` se usa junto con un bloque `try`-`except` y tiene la función de ejecutar código siempre, sin importar si ocurrió una excepción o no. Se usa típicamente para liberar recursos o realizar acciones  que son típicamente acciones de limpiezaque deben ejecutarse sin importar lo que pase dentro del `try`.\n",
+    " \n",
     "Finalmente, puede agregarse un bloque `finally` donde se escriben las sentencias de finalización, que son típicamente acciones de limpieza. La particularidad del bloque `finally` es que **se ejecuta siempre, haya surgido una excepción o no**. Si hay un bloque `except`, no es necesario que esté presente el finally, y es posible tener un bloque `try` sólo con finally, sin `except`.\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "attachments": {},
