--- a/Semanas/Tema1_Errores_Excepciones.ipynb
+++ b/Semanas/Tema1_Errores_Excepciones.ipynb
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,17 +488,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tienes  6 años\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "imprimir()"
    ]
@@ -686,16 +678,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En Python, la instrucción `finally` se usa junto con un bloque `try`-`except` y tiene la función de ejecutar código siempre, sin importar si ocurrió una excepción o no. Se usa típicamente para liberar recursos o realizar acciones  que son típicamente acciones de limpiezaque deben ejecutarse sin importar lo que pase dentro del `try`.\n",
-    " \n",
-    "Finalmente, puede agregarse un bloque `finally` donde se escriben las sentencias de finalización, que son típicamente acciones de limpieza. La particularidad del bloque `finally` es que **se ejecuta siempre, haya surgido una excepción o no**. Si hay un bloque `except`, no es necesario que esté presente el finally, y es posible tener un bloque `try` sólo con finally, sin `except`.\n",
+    "En Python, la instrucción `finally` se usa junto con un bloque `try`-`except`. La particularidad del bloque `finally` es que  **ejecutar código siempre, sin importar si ocurrió una excepción o no**. Se usa típicamente para liberar recursos o realizar acciones  que son típicamente acciones de limpiezaque deben ejecutarse sin importar lo que pase dentro del `try`. Si hay un bloque `except`, no es necesario que esté presente el finally, y es posible tener un bloque `try` sólo con finally, sin `except`.\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "attachments": {},
@@ -703,6 +688,13 @@
    "metadata": {},
    "source": [
     "Este bloque se suele usar si queremos **ejecutar algún tipo de acción de limpieza**. Si por ejemplo estamos escribiendo datos en un fichero pero ocurre una excepción, tal vez queramos borrar el contenido que hemos escrito con anterioridad, para no dejar datos inconsistenes en el fichero."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Ejemplo"
    ]
   },
   {
@@ -732,11 +724,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Resumen**\n",
+    "En resumen veamos como actúa Python al encontrarse con estos bloques. \n",
     "\n",
-    "Veamos ahora como es que actúa Python al encontrarse con estos bloques. \n",
-    "\n",
-    "Python comienza a ejecutar las instrucciones que se encuentran dentro de un bloque `try` normalmente. Si durante la ejecución de esas instrucciones se levanta una excepción, Python interrumpe la ejecución en el punto exacto en que surgió la excepción y pasa a la ejecución del bloque `except` correspondiente.\n",
+    "Python comienza a ejecutar las instrucciones que se encuentran dentro de un bloque `try`. Si durante la ejecución de esas instrucciones se levanta una *excepción*, Python interrumpe la ejecución en el punto exacto en que surgió la excepción y pasa a la ejecución del bloque `except` correspondiente.\n",
     "\n",
     "Para ello, Python verifica uno a uno los bloques `except` y si encuentra alguno cuyo tipo haga referencia al tipo de excepción levantada, comienza a ejecutarlo. Sino encuentra ningún bloque del tipo correspondiente pero hay un bloque `except` sin tipo, lo ejecuta. Al terminar de ejecutar el bloque correspondiente, se pasa a la ejecución del bloque `finally`, si se encuentra definido.\n",
     "\n",
@@ -790,32 +780,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Procesamiento y propagación de excepciones"
+    "### Instrucción `Raise()`"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hemos visto cómo atrapar excepciones, es necesario ahora que veamos qué se supone que hagamos al atrapar una excepción. En primer lugar podríamos ejecutar alguna lógica particular del caso como: cerrar un archivo, realizar una procesamiento alternativo al del bloque `try`, etc. Pero más allá de esto tenemos algunas opciones genéricas que consisten en: **dejar constancia de la ocurrencia de la excepción**, **propagar la excepción** o, incluso, hacer ambas cosas.\n",
+    "La instrucción `raise` en Python se utiliza para generar (\"lanzar\") excepciones de manera explícita. Es útil cuando se desea manejar errores de forma personalizada o cuando se quiere interrumpir la ejecución debido a una condición inesperada.\n",
     "\n",
-    "Para dejar constancia de la ocurrencia de la excepción, se puede escribir en un archivo de log o simplemente mostrar un mensaje en pantalla. Generalmente cuando se deja constancia de la ocurrencia de una excepción se suele brindar alguna información del contexto en que ocurrió la excepción, por ejemplo: tipo de excepción ocurrida, momento en que ocurrió la excepción y cuáles fueron las llamadas previas a la excepción. El objetivo de esta información es facilitar el diagnóstico en caso de que alguien deba corregir el programa para evitar que la excepción siga apareciendo.\n",
-    "\n",
-    "Es posible, por otra parte, que luego de realizar algún procesamiento particular del caso se quiera que la excepción se propague hacia la función que había invocado a la función actual. Para hacer esto Python nos brinda la instrucción `raise()`.\n",
-    "\n",
-    "Si se invoca esta instrucción dentro de un bloque `except`, sin pasarle parámetros, Python levantará la excepción atrapada por ese bloque.\n",
-    "\n",
-    "También podría ocurrir que en lugar de propagar la excepción tal cual fue atrapada, quisiéramos lanzar una excepción distinta, más significativa para quien invocó a la función actual y que posiblemente contenga cierta información de contexto. Para levantar una excepción de cualquier tipo, utilizamos también la sentencia `raise`, pero indicándole el tipo de excepción que deseamos lanzar y pasando a la excepción los parámetros con información adicional que queramos brindar.\n",
-    "\n"
+    "La instrucción `raise` permite lanzar excepciones de forma manual. Se pueden usar excepciones personalizadas para mejorar el control de errores. Es útil en aplicaciones como cálculos actuariales, donde es importante validar los datos antes de usarlos.\n"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El siguiente fragmento de código muestra este uso de `raise`."
+    "### Sintaxis básica\n",
+    "\n",
+    "```python\n",
+    "raise NombreDeLaExcepcion(\"Mensaje opcional\")\n",
+    "```"
    ]
   },
   {
@@ -842,7 +827,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -888,6 +872,31 @@
    "outputs": [],
    "source": [
     "raise ZeroDivisionError"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    x = int(\"hola\")  # Esto generará un ValueError\n",
+    "except ValueError:\n",
+    "    print(\"Se detectó un error al convertir a entero\")\n",
+    "    raise  # Relanza la misma excepción"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    raise ValueError(\"Número no válido\")\n",
+    "except ValueError as e:\n",
+    "    print(f\"Error capturado: {e}\")"
    ]
   }
  ],
