--- a/Semanas/Tema1_Errores_Excepciones.ipynb
+++ b/Semanas/Tema1_Errores_Excepciones.ipynb
@@ -898,6 +898,31 @@
     "except ValueError as e:\n",
     "    print(f\"Error capturado: {e}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Ejercicio\n",
+    "\n",
+    "\n",
+    "Escribe un programa en Python que solicite al usuario ingresar el número de póliza y el monto del siniestro. Luego, determina la prima del seguro con base en la siguiente fórmula:  \n",
+    "$$\\text{prima} = \\text{monto siniestro} \\times 1.10$$\n",
+    "\n",
+    "donde el 10% adicional representa un margen de seguridad.  \n",
+    "\n",
+    "El programa debe manejar las siguientes excepciones utilizando  `try-except` ,  `else` ,  `finally`  y  `raise` , mandando un mensaje adecuado al usuario:  \n",
+    "\n",
+    "-  `ValueError`  si el usuario ingresa un valor no numérico para el número de póliza o el monto del siniestro.  \n",
+    "-  `MontoInvalidoError`  (excepción personalizada) si el monto del siniestro es negativo o cero. Esta excepción debe lanzarse con `raise`.  \n",
+    "-  `PolizaInvalidaError`  (excepción personalizada) si el número de póliza es negativo o no es un número entero. Esta excepción debe lanzarse con `raise`.  \n",
+    "-  `Exception`  para cualquier otro error inesperado. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
