--- a/Semanas/Tema2_POO.ipynb
+++ b/Semanas/Tema2_POO.ipynb
@@ -31,7 +31,7 @@
    "source": [
     "Cosas de lo más cotidianas como un perro o un coche pueden ser representadas con *clases*. Estas *clases* tienen diferentes características, que en el caso del perro podrían ser la *edad*, el *nombre* o la *raza*. Llamaremos a estas características, ***atributos***.\n",
     "\n",
-    "Por otro lado, las clases tienen un conjunto de funcionalidades o cosas que pueden hacer. En el caso del perro podría ser andar o ladrar. Llamaremos a estas funcionalidades ***métodos***.\n",
+    "Por otro lado, las clases tienen un conjunto de funcionalidades o cosas que pueden hacer. En el caso del perro podría ser caminar o ladrar. Llamaremos a estas funcionalidades ***métodos***.\n",
     "\n",
     "Por último, pueden existir diferentes tipos de perro. Podemos tener uno que se llama Rocky o el del vecino que se llama Bobby. Llamaremos a estos diferentes tipos de perro ***objetos***. \n",
     "\n",
