--- a/Semanas/Tema2_POO.ipynb
+++ b/Semanas/Tema2_POO.ipynb
@@ -21,6 +21,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "La *Programación Orientada a Objetos* es un paradigma que organiza el código en clases y objetos, permitiendo estructurar programas de manera más modular y reutilizable.\n",
+    "\n",
+    "En Python, todo es un objeto, lo que hace que este paradigma sea muy natural dentro del lenguaje.\n",
+    "\n",
     "Este paradigma de programación nos permite organizar el código de una manera que se asemeja bastante a como pensamos en la vida real, utilizando ***clases***. Estas nos permiten agrupar un conjunto de variables y funciones."
    ]
   },
@@ -33,9 +37,25 @@
     "\n",
     "Por otro lado, las clases tienen un conjunto de funcionalidades o cosas que pueden hacer. En el caso del perro podría ser caminar o ladrar. Llamaremos a estas funcionalidades ***métodos***.\n",
     "\n",
-    "Por último, pueden existir diferentes tipos de perro. Podemos tener uno que se llama Rocky o el del vecino que se llama Bobby. Llamaremos a estos diferentes tipos de perro ***objetos***. \n",
+    "Por último, pueden existir diferentes tipos de perro. Podemos tener uno que se llama _Rocky_ o el del vecino que se llama _Bobby_. Llamaremos a estos diferentes tipos de perro ***objetos***. \n",
     "\n",
     "Es decir, el concepto abstracto de perro es la clase, pero Toby o cualquier otro perro particular será el objeto."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Conceptos Clave de POO**\n",
+    "\n",
+    "* **Clases**: Son plantillas para crear objetos. Definen atributos (datos) y métodos (funciones).\n",
+    "* **Objetos**: Son instancias concretas de una clase.\n",
+    "\n",
+    "* **Encapsulamiento**: Restricción del acceso a los atributos y métodos para proteger la información.\n",
+    "\n",
+    "* **Herencia**: Permite que una clase hija herede atributos y métodos de una clase padre.\n",
+    "\n",
+    "* **Polimorfismo**: Permite que diferentes clases compartan métodos con el mismo nombre, pero con comportamientos distintos.\n"
    ]
   },
   {
@@ -43,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La programación orientada a objetos está basada en 6 principios básicos:\n",
+    "<!-- La programación orientada a objetos está basada en 6 principios básicos:\n",
     "\n",
     "* **Herencia**\n",
     "\n",
@@ -55,7 +75,7 @@
     "\n",
     "* **Acoplamiento**\n",
     "\n",
-    "* **Encapsulamiento**"
+    "* **Encapsulamiento** -->\n"
    ]
   },
   {
