--- a/Semanas/Tema2_POO.ipynb
+++ b/Semanas/Tema2_POO.ipynb
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -150,6 +150,7 @@
    "source": [
     "class Perro:\n",
     "    pass\n",
+    "\n",
     "\n",
     "print(type(Perro))"
    ]
@@ -201,7 +202,7 @@
    "source": [
     "Una vez que ya tenemos la clase, podemos crear un objeto de la misma (**instanciar una clase**). Podemos hacerlo como si de una variable normal se tratase:\n",
     "\n",
-    "`objeto = Nombre_clase() `\n",
+    "`objeto = Nombre_Clase() `\n",
     "\n",
     "Dentro de los paréntesis irían los parámetros de entrada si los hubiera."
    ]
@@ -242,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -260,8 +261,10 @@
     "    \n",
     "\n",
     "alumno1 = Alumno()\n",
-    "alumno1.universidad = 'UTM'\n",
     "print(alumno1.universidad)\n",
+    "#alumno1.universidad = 'UTM'\n",
+    "#print(alumno1.universidad)\n",
+    "\n",
     "\n",
     "alumno2 = Alumno()\n",
     "print(alumno2.universidad)\n",
