--- a/Semanas/Tema2_POO.ipynb
+++ b/Semanas/Tema2_POO.ipynb
@@ -818,7 +818,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En Python, un método es una función definida dentro de una clase que opera sobre instancias de esa clase. Los métodos permiten que los objetos realicen acciones y manipulen sus datos internos. Se utilizan para definir comportamientos y funcionalidades específicas asociadas a una clase."
+    "En Python, los *métodos* en clases son funciones definidas dentro de una clase y están diseñadas para **operar en instancias de la clase o en la propia clase**. Se utilizan para manipular los atributos de los objetos y proporcionar funcionalidades relacionadas con la clase."
    ]
   },
   {
@@ -832,18 +832,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Métodos de instancia:\n",
+    "#### Métodos de instancia (`self`)\n",
     "\n",
-    "Son los más comunes y operan sobre una instancia específica de la clase. El primer parámetro de estos métodos es siempre `self`, que hace referencia a la instancia actual."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Métodos de clase: \n",
-    "\n",
-    "Operan sobre la clase en sí misma en lugar de sobre una instancia específica. Se definen utilizando el decorador `@classmethod` y reciben como primer parámetro cls, que hace referencia a la clase"
+    "Son los más comunes y operan sobre una instancia específica de la clase. Usan el parámetro `self`, que hace referencia a la instancia actual."
    ]
   },
   {
@@ -858,13 +849,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Los **métodos** son las funciones que se definen dentro de una clase y que, por consiguiente, pueden ser referenciadas por los objetos de dicha clase. Sin embargo, realmente los métodos son algo más. Por ejemplo, en nuestra clase `alumno` definiremos las funciones `saludo( )` y `cambiar_carrera()`."
+    "Los **métodos** son las funciones que se definen dentro de una clase y que, por consiguiente, pueden ser referenciadas por los objetos de dicha clase. En nuestra clase `Alumno` definiremos las funciones `mostrar_informacion( )` y `cambiar_carrera()`."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -872,26 +858,75 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Alumno: # class es la palabra reservada para definir una clase\n",
-    "    \"\"\"Esta clase define las propiedades y el comportamiento de un estudiante \"\"\" #Docsstring\n",
+    "class Alumno: \n",
     "    \n",
-    "    # Constructor de la clase\n",
-    "    def __init__(self,nombre,apellido1,apellido2, edad, campus, carrera):\n",
-    "        \n",
-    "            print(f'Creando alumno {nombre} de la carrera {carrera}')\n",
-    "            \n",
-    "            # Atributos de la instacia\n",
-    "            self.nombrecompleto=\" \".join([nombre,apellido1,apellido2])\n",
-    "            self.carrera = carrera\n",
-    "            self.edad = edad\n",
-    "            self.campus=campus\n",
-    "    \n",
-    "    #Métodos\n",
-    "    def saludo(self):\n",
-    "        print('Hola ' + self.nombrecompleto)\n",
+    "    # Constructor de la clase. \n",
+    "    def __init__(self,nombre,apellido1,apellido2, matricula, campus, carrera):\n",
+    "        self.nombrecompleto=\" \".join([nombre,apellido1,apellido2])\n",
+    "        self.carrera = carrera\n",
+    "        self.matricula = matricula\n",
+    "        self.campus=campus\n",
+    "     \n",
+    "    #Métodos de instancia    \n",
+    "    def mostrar_informacion(self):\n",
+    "        print(f\"Información del estudiante {self.nombrecompleto}\")\n",
+    "        print(f\"Matricula: {self.matricula}\")\n",
+    "        print(f\"Carrera: {self.carrera}\")\n",
+    "        print(f\"Campus {self.campus}\")        \n",
     "\n",
     "    def cambiar_carrera(self,nueva_carrera):\n",
-    "        self.carrera = nueva_carrera"
+    "        self.carrera = nueva_carrera\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Información del estudiante Pablo Jorge Hernandez Hernandez\n",
+      "Matricula: 2009020510\n",
+      "Carrera: Actuaría\n",
+      "Campus Huatulco\n"
+     ]
+    }
+   ],
+   "source": [
+    "alumno = Alumno(\"Pablo Jorge\", \"Hernandez\", \"Hernandez\", \"2009020510\", \"Huatulco\", \"Actuaría\")\n",
+    "alumno.mostrar_informacion()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alumno.cambiar_carrera(\"Matemáticas Aplicadas\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Información del estudiante Pablo Jorge Hernandez Hernandez\n",
+      "Matricula: 2009020510\n",
+      "Carrera: Matemáticas Aplicadas\n",
+      "Campus Huatulco\n"
+     ]
+    }
+   ],
+   "source": [
+    "alumno.mostrar_informacion()"
    ]
   },
   {
@@ -994,10 +1029,12 @@
    "source": [
     "class Punto:\n",
     "    \n",
+    "    #Constructor de la clase\n",
     "    def __init__(self,x=0,y=0):\n",
     "        self.x = x\n",
     "        self.y = y\n",
     "    \n",
+    "    #Métodos de instancia\n",
     "    def norma(self):\n",
     "        return (self.x**2 + self.y**2)**(1/2)\n",
     "    \n",
@@ -1069,7 +1106,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## `dir`"
+    "### Métodos de clase (`@classmethod`) \n",
+    "\n",
+    "Estos métodos operan a nivel de la clase en lugar de una instancia. Usan el decorador `@classmethod` y reciben `cls` como primer parámetro en lugar de `self`, que hace referencia a la clase."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Ejemplo"
    ]
   },
   {
@@ -1077,6 +1123,299 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "class Alumno: \n",
+    "    contador_alumnos = 0  \n",
+    "\n",
+    "    def __init__(self, nombre, apellido1, apellido2, matricula, campus, carrera):\n",
+    "        self.nombrecompleto = \" \".join([nombre, apellido1, apellido2])\n",
+    "        self.carrera = carrera\n",
+    "        self.matricula = matricula\n",
+    "        self.campus = campus\n",
+    "        Alumno.contador_alumnos += 1  \n",
+    "\n",
+    "    def mostrar_informacion(self):\n",
+    "        print(f\"Información del estudiante {self.nombrecompleto}\")\n",
+    "        print(f\"Matrícula: {self.matricula}\")\n",
+    "        print(f\"Carrera: {self.carrera}\")\n",
+    "        print(f\"Campus: {self.campus}\")\n",
+    "\n",
+    "    def cambiar_carrera(self, nueva_carrera):\n",
+    "        self.carrera = nueva_carrera\n",
+    "\n",
+    "    @classmethod\n",
+    "    def total_alumnos(cls):\n",
+    "        return f\"Total de alumnos creados: {cls.contador_alumnos}\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a1 = Alumno(\"Emily\", \"Borel\", \"Gómez\", \"A12345\", \"Huatulco\", \"Actuaría\")\n",
+    "a2 = Alumno(\"Axelandro\", \"López\", \"Díaz\", \"A67890\", \"Huatulco\", \"Economía\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "type object 'Alumno' has no attribute 'total_alumnos'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)\n",
+      "\u001b[0;32m/var/folders/cv/9b0z6xrs33j_klsdlq5l4_2c0000gn/T/ipykernel_64527/2845324706.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mAlumno\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtotal_alumnos\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: type object 'Alumno' has no attribute 'total_alumnos'"
+     ]
+    }
+   ],
+   "source": [
+    "print(Alumno.total_alumnos())  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Ejemplo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Alumno: \n",
+    "    def __init__(self, nombre, apellido1, apellido2, matricula, campus, carrera):\n",
+    "        self.nombrecompleto = \" \".join([nombre, apellido1, apellido2])\n",
+    "        self.carrera = carrera\n",
+    "        self.matricula = matricula\n",
+    "        self.campus = campus\n",
+    "\n",
+    "    @classmethod\n",
+    "    def desde_cadena(cls, datos):\n",
+    "        nombre, apellido1, apellido2, matricula, campus, carrera = datos.split(\", \")\n",
+    "        return cls(nombre, apellido1, apellido2, matricula, campus, carrera)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cadena = \"Lluvia, Ramírez, Torres, A99999, Huatulco, Administración Turística\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alumno_nuevo = Alumno.desde_cadena(cadena)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Ejemplo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Alumno: \n",
+    "    campus_umar = [\"Huatulco\", \"Puerto Escondido\", \"Oaxaca\", \"Puerto Ángel\"]\n",
+    "\n",
+    "    def __init__(self, nombre, apellido1, apellido2, matricula, campus, carrera):\n",
+    "        self.nombrecompleto = \" \".join([nombre, apellido1, apellido2])\n",
+    "        self.carrera = carrera\n",
+    "        self.matricula = matricula\n",
+    "        self.campus = campus\n",
+    "\n",
+    "    @classmethod\n",
+    "    def check_campus(cls, campus):\n",
+    "        return campus in cls.campus_umar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Alumno.check_campus(\"Huatulco\")) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(Alumno.es_campus_valido(\"Ciudad de México\")) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Ejemplo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Alumno_umar_huatulco: \n",
+    "    carreras_disponibles = [\"Actuaría\", \"Economía\", \"Ciencias de la Comunicación\", \"Administración Turística\", \"Relaciones Internacionales\", \"Ciencias Marítimas\"]\n",
+    "\n",
+    "    @classmethod\n",
+    "    def mostrar_carreras_disponibles(cls):\n",
+    "        return f\"Carreras en UMAR Huatulco:\\n {', '.join(cls.carreras_disponibles)}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Carreras disponibles:\n",
+      " Actuaría, Economía, Ciencias de la Comunicación, Administración Turística, Relaciones Internacionales, Ciencias Marítimas\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Alumno_umar_huatulco.mostrar_carreras_disponibles())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `dir`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En Python `dir()` es una función incorporada en Python que se usa para inspeccionar los atributos y métodos disponibles de un objeto, una clase o un módulo."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sintaxis\n",
+    "\n",
+    "```python\n",
+    "dir(objeto)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__abs__',\n",
+       " '__add__',\n",
+       " '__bool__',\n",
+       " '__ceil__',\n",
+       " '__class__',\n",
+       " '__delattr__',\n",
+       " '__dir__',\n",
+       " '__divmod__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__float__',\n",
+       " '__floor__',\n",
+       " '__floordiv__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getformat__',\n",
+       " '__getnewargs__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__int__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__mod__',\n",
+       " '__mul__',\n",
+       " '__ne__',\n",
+       " '__neg__',\n",
+       " '__new__',\n",
+       " '__pos__',\n",
+       " '__pow__',\n",
+       " '__radd__',\n",
+       " '__rdivmod__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__rfloordiv__',\n",
+       " '__rmod__',\n",
+       " '__rmul__',\n",
+       " '__round__',\n",
+       " '__rpow__',\n",
+       " '__rsub__',\n",
+       " '__rtruediv__',\n",
+       " '__setattr__',\n",
+       " '__setformat__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__sub__',\n",
+       " '__subclasshook__',\n",
+       " '__truediv__',\n",
+       " '__trunc__',\n",
+       " 'as_integer_ratio',\n",
+       " 'conjugate',\n",
+       " 'fromhex',\n",
+       " 'hex',\n",
+       " 'imag',\n",
+       " 'is_integer',\n",
+       " 'real']"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x = 1.3\n",
     "type(x)\n",
