--- a/Semanas/Tema2_POO.ipynb
+++ b/Semanas/Tema2_POO.ipynb
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +934,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Observemos que cuando se usa la función `saludo( )` no se introduce ningún argumento. Sin embargo, en la definición  de la función `saludo` se tiene un argumento: `self` ¿Qué está pasando entonces? resulta  que `saludo( )` está al estar siendo utilizada como un método por los objetos de la clase `Alumno`, es necesario que cuando un objeto referencia a dicha función,  pase su propia referencia como primer parámetro de la función."
+    "Observemos que cuando se usa la función `mostrar_informacion( )` no se introduce ningún argumento. Sin embargo, en la definición  de la función `mostrar_informacion` se tiene un argumento: `self` ¿Qué está pasando entonces? resulta  que `mostrar_informacion( )` al estar siendo utilizada como un método por los objetos de la clase `Alumno`, es necesario que cuando un objeto referencia a dicha función,  pase su propia referencia como primer parámetro de la función."
    ]
   },
   {
@@ -942,7 +942,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Similarmente si se llama al método `actualizar_carrera()`, se observa que se ingresa sólo un argumento `carrera` y a diferencia de la función `saludo` esta función si modifica las propiedades del objeto, dado que cambia la `carrera`. Este hecho lo puedes apreciar cuando se vuelve a referenciar al atributo `carrera`."
+    "Similarmente, cuando se llama al método `actualizar_carrera()`, se observa que se ingresa sólo un argumento `carrera` y a diferencia de la función `mostrar_infomacion` esta función si modifica las propiedades del objeto, dado que cambia la `carrera`. Este hecho lo puedes apreciar cuando se vuelve a referenciar al atributo `carrera`."
    ]
   },
   {
@@ -950,18 +950,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El siguiente código muestra **dos formas diferentes y equivalentes de llamar al método** `saludo()`:"
+    "El siguiente código muestra **dos formas diferentes y equivalentes de llamar al método** `mostrar_informacion()`:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Información del estudiante Pablo Jorge Hernandez Hernandez\n",
+      "Matricula: 2009020510\n",
+      "Carrera: Actuaría\n",
+      "Campus Huatulco\n",
+      "Información del estudiante Pablo Jorge Hernandez Hernandez\n",
+      "Matricula: 2009020510\n",
+      "Carrera: Actuaría\n",
+      "Campus Huatulco\n"
+     ]
+    }
+   ],
    "source": [
-    "alumno1.saludo()\n",
+    "alumno.mostrar_informacion()\n",
     "\n",
-    "Alumno.saludo(alumno2)"
+    "Alumno.mostrar_informacion(alumno)"
    ]
   },
   {
@@ -1100,6 +1115,41 @@
     "#p1.diferencia(p2)\n",
     "#p1.distancia(p2)\n",
     "print(p1.punto_medio(p2).x, p1.punto_medio(p2).y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Ejercicio \n",
+    "\n",
+    "Construye una clase en Python llamada `Fracción` que *modele* el comportamiento de los números racionales. Esta clase deberá incluir métodos de instancia que permitan realizar operaciones aritméticas y otras funcionalidades útiles para trabajar con fracciones. La clase debe cumplir con las siguientes caracteristicas:\n",
+    "\n",
+    "### 1. **Constructor de la clase (`__init__`)**  \n",
+    "   - Debe aceptar dos valores enteros: numerador y denominador.  \n",
+    "   - Si no se proporciona un denominador, debe asumir el valor 1.  \n",
+    "   - Si el denominador es 0, debe lanzar un error (`ValueError`).  \n",
+    "   \n",
+    "\n",
+    "### 2. **Métodos de instancia obligatorios**  \n",
+    "   Implementa los siguientes métodos para operar con fracciones:  \n",
+    "\n",
+    "   - `suma(self, otra_fraccion)`: Devuelve una nueva fracción que represente la suma de la instancia actual con `otra_fracción`.  \n",
+    "  \n",
+    "   - `resta(self, otra_fraccion)`: Devuelve una nueva fracción que represente la diferencia entre la instancia actual y `otra_fracción`.  \n",
+    "\n",
+    "   - `multiplicacion(self, otra_fraccion)`: Devuelve una nueva fracción que sea el producto de la instancia actual por `otra_fracción`.  \n",
+    "  \n",
+    "   - `division(self, otra_fraccion)`: Devuelve una nueva fracción que sea el cociente de la instancia actual entre `otra_fracción` (verifica que no haya división por cero).  \n",
+    "\n",
+    "   - `a_decimal(self)`: Devuelve el valor decimal de la fracción.  \n",
+    "\n",
+    "   - `es_igual(self, otra_fraccion)`: Devuelve `True` si ambas fracciones son equivalentes y `False` en caso contrario.  \n",
+    "\n",
+    "   - `imprimir(self)`: Imprime la fracción en formato `a/b`, donde `a` es el numerador y `b` el denominador.  \n",
+    "   \n",
+    "   - `simplificar(self)`: - Devuelde la fracción en su forma reducida (por ejemplo, si la fracción es `4/6` debe \n",
+    "    devolverse como `2/3`).  "
    ]
   },
   {
