--- a/Semanas/Tema2_POO.ipynb
+++ b/Semanas/Tema2_POO.ipynb
@@ -1153,6 +1153,45 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Fraccion:\n",
+    "    def __init__(self,a,b=1):\n",
+    "        try:\n",
+    "            self.numerador = int(a)\n",
+    "            self.denominador = int(b)\n",
+    "            self.valor_decimal = self.numerador/self.denominador\n",
+    "        except ValueError:\n",
+    "            print(\"Tanto el numerador como el denominador deben ser numeros enteros\")\n",
+    "        except ZeroDivisionError:\n",
+    "            print(\"El denominador tiene que ser distinto de cero\")\n",
+    "            raise ValueError\n",
+    "    \n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "q = Fraccion(2,4)\n",
+    "print(q.b)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
