--- a/Semanas/Tema1_Errores_Excepciones.ipynb
+++ b/Semanas/Tema1_Errores_Excepciones.ipynb
@@ -561,13 +561,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Excepcion ZeroDivisionError o TypeError\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
-    "    #c = 5/0       \n",
-    "    d = 2 + \"Hola\" \n",
+    "    c = 5/0       \n",
+    "    #d = 2 + \"Hola\" \n",
     "except (ZeroDivisionError, TypeError):\n",
     "    print(\"Excepcion ZeroDivisionError o TypeError\")"
    ]
